Style fixes Remove border in account profile Change hyperlink of release note to github release page Prevent account-bio is too long

--- a/files/bundle.css
+++ b/files/bundle.css
@@ -17558,6 +17558,7 @@ a.caldisabled {
 }
 .account-bio {
     color: #8899a6;
+    max-width:500px;
 }
 .media-img {
     max-width: 100%;
